--- a/Final/Final.vcxproj
+++ b/Final/Final.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Final.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="StandardRoom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Date.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="StandardRoom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
