--- a/Final/Final.vcxproj.filters
+++ b/Final/Final.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="StandardRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SemiLuxRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Room.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StandardRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SemiLuxRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
