--- a/Final/Final.vcxproj.filters
+++ b/Final/Final.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="SemiLuxRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LuxRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Room.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SemiLuxRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LuxRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
