--- a/Final/Final.vcxproj
+++ b/Final/Final.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Final.cpp" />
+    <ClCompile Include="LuxRoom.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="SemiLuxRoom.cpp" />
     <ClCompile Include="StandardRoom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Date.h" />
+    <ClInclude Include="LuxRoom.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="SemiLuxRoom.h" />
     <ClInclude Include="StandardRoom.h" />
