--- a/Final/Final.vcxproj.filters
+++ b/Final/Final.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="LuxRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hotels.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Room.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LuxRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Hotels.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
