--- a/Final/Final.vcxproj.filters
+++ b/Final/Final.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Hotels.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RoomException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
