--- a/Final/Final.vcxproj
+++ b/Final/Final.vcxproj
@@ -144,6 +144,9 @@
     <ClInclude Include="SemiLuxRoom.h" />
     <ClInclude Include="StandardRoom.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
